<?xml version="1.0"?>
<package>
  <name>mobile</name>
  <version>0.0.0</version>
  <description>this code based on Example package for using http://wjwwood.io/serial/ library and p3dx packages from Sangmin Ahn and serial-example from garyservin </description>

  <author email="jeongjae0815@gmail.com">Jeongjae Park</author>
  <maintainer email="jeongjae0815@gmail.com">Jeongjae Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosaria</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>rospy</run_depend>

</package>



